components dinamycs propertys

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,16 +2,13 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-      src="https://cdn.fandomwire.com/wp-content/uploads/2023/04/28062109/Im-not-doing-anything-for-Marvel-After-Scarlett-Johansson-Elizabeth-Olsen-Shares-Concerning-News-About-Her-Future-in-MCU.jpg"
-      alt=""
-      >
+      src="{{photoCover}}" alt="">
     </div>
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
   </div>
   <div class="container__small-card__separator">
     <hr>
   </div>
-
 </div>
