--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,5 +1,4 @@
 .container__big-card {
-  /* border: #fff solid 2px; */
   width: 400px;
   height: 500px;
   margin-left: 20px;
@@ -15,16 +14,12 @@
   min-width: 400px;
 }
 
-.big-card__title > h1 {
+.big-card__title > h1 > a {
   font-size: 20px;
   margin-top: 15px;
 }
 
-.big-card__description {
+.big-card__description p > a {
   margin-top: 20px;
-}
-
-.big-card__description > p > a {
   color: gray;
-
 }
